# reader

./: .env.offline  .gitignore  README.md  TAURI-B1-SAME-ORIGIN-PROXY.md  TAURI_BUILD_GUIDE.md  odoc-aiknowledge-api-signature-0.0.6.tgz  odoc-aiknowledge-icon-0.1.7.tgz  odoc-aiknowledge-lib-qiniu-cdn-0.0.17.tgz  odoc-aiknowledge-markdown-0.2.4.tgz  odoc-aiknowledge-report-0.7.13.tgz  odoc-aiknowledge-report-common-0.5.9.tgz  odoc-aiknowledge-special-util-0.2.10.tgz  odoc-types-go-sea-proto-1.2.499.tgz  package.json  tsconfig.json  viewer.properties.json  vite.config.ts
.github/workflows/: ci-tauri.yaml
docs/.vitepress/: config.mts  empty-module.js
docs/components/: MyLayout.vue
scripts/: build-sidecar.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/db/: app.db
src-tauri/src/: gateway.rs  lib.rs
src/adaptor/: bridge.ts
src/api/: aiHighlighter.ts  annotations.ts  attachments.ts  auth.ts  axios.ts  base.ts  category.ts  citation.ts  copilot.ts  document.ts  export.ts  fullTextTranslate.ts  group.ts  groupNote.ts  imgSearch.ts  latex.ts  learn.ts  material.ts  note.ts  parse.ts  question.ts  report.ts  review.ts  revise.ts  search.ts  setting.ts  syncdata.ts  system.ts  translate.ts  user.ts  vip.ts  vipPay.ts
src/dom/: arrow.ts  avatar.ts  copyright.ts  markers.ts  pdf.ts  thumbnails.ts  tippy.ts  tooltip.ts
src/hooks/: useAIHighlighter.ts  useCollect.ts  useCopilot.ts  useDocAttachments.ts  useExport.ts  useHeaderScreenShot.ts  useNoteState.ts  usePDFWebviewScrollMode.ts  (+1 more)
(+281 files in other folders)
